<resources>
    <string name="app_name">ShoppingMall</string>
    <string name="mainActivity_fragment_title_home">首页</string>
    <string name="mainActivity_fragment_title_sort">分类</string>
    <string name="mainActivity_fragment_title_find">发现</string>
    <string name="mainActivity_fragment_title_shopCar">购物车</string>
    <string name="mainActivity_fragment_title_mine">个人中心</string>
    <string name="message">消息</string>
    <string name="down_time">00:00:00</string>
    <string name="find_more">查看更多</string>
    <string name="home_new">新品推荐</string>
    <string name="home_hot">这里都是买的棒棒哒</string>

    <string name="detailToolbar">商品详情</string>
    <string name="detailContext">"预售截止10月15日，预售期为限量礼盒版,包括特制木盒×1、画集x1、邮票x1套、书签x1、贴纸x1、信封x1、礼盒特 "</string>
    <string name="detailText">由</string>
    <string name="SGG">尚硅谷</string>
    <string name="detailText2">发货</string>
    <string name="detailSelectText">请选择款式</string>
    <string name="detailTips">提示:普通商品享有质量问题7天退货，签收后3个工作日内可换货。其他特殊商品(如手办)的售后以页面说明为准
</string>
    <string name="detail">图文详情</string>
    <string name="share">分享</string>
    <string name="search">搜索</string>
    <string name="home">首页</string>

    <string name="dfk">待付款</string>
    <string name="dfh">待发货</string>
    <string name="dsh">待收货</string>
    <string name="ywc">已完成</string>
    <string name="shouh">售后/退款</string>
    <string name="shdz">收货地址</string>
    <string name="wdsc">我的收藏</string>
    <string name="wdyhj">我的优惠券</string>
    <string name="wdgz">我的瓜子</string>
    <string name="wdjp">我的奖品</string>
    <string name="wddzp">我的电子票</string>
    <string name="yqfx">邀请分享</string>
    <string name="kfzx">客服中心</string>
    <string name="fwfk">服务反馈</string>
    <string name="classification">分类</string>
    <string name="label">标签</string>

    <string name="SKIRT">小裙子</string>
    <string name="JACKET_URL">上衣</string>
    <string name="PANTS_URL">下装</string>
    <string name="OVERCOAT_URL">外套</string>
    <string name="ACCESSORY_URL">配件</string>
    <string name="BAG_URL">包包</string>
    <string name="DRESS_UP_URL">装扮</string>
    <string name="HOME_PRODUCTS_URL">居家宅品</string>
    <string name="STATIONERY_URL">办公文具</string>
    <string name="DIGIT_URL">数码周边</string>
    <string name="GAME_URL">游戏专区</string>
    <string name="shopchar">购物车</string>
    <string name="hotRecommed">热卖推荐</string>
    <string name="commonSort">常用分类</string>
    <string name="Tips">提示</string>
    <string name="TipsMessage">你还没有登录哦！么么~</string>
    <string name="welcomeActivity_alert_button_yes">确定</string>
    <string name="mianActivity_exit_the_program_toast">再点击一次,退出当前应用</string>
    <string name="login_success">登陆成功</string>
    <string name="exitUser">退出登录</string>
    <string name="order_user">用户名：</string>
    <string name="order_phone">电话：</string>
    <string name="order_addr">地址：</string>
    <string name="order_price">商品价格</string>
    <string name="order_return">退换无忧</string>
    <string name="order_num_price">￥0.00</string>
    <string name="order_freight">运费</string>
    <string name="order_sub">立减</string>
    <string name="order_discount">优惠卷</string>
    <string name="order_dou">桂豆</string>
    <string name="order_uesless">无可用</string>
    <string name="order_gift">礼品卡</string>
    <string name="order_total">共999，满1000可用</string>
    <string name="order_invoice">发票</string>
    <string name="order_detailed">普通商品明细——一个人</string>
    <string name="order_mode">支付方式</string>
    <string name="order_onlinepayment">在线支付</string>
    <string name="orderToolbar">订单详情</string>
    <string name="order_commit">提交订单</string>
    <string name="order_symbol">￥</string>

    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
    <string name="PayToolbar">支付详情</string>
    <string name="aWaitPaymentToolbar">待付款</string>
    <string name="DropShippingToolbar">代发货</string>s


    <!--  绑定联系方式  -->
    <string name="bindinfo_toolbar">绑定联系方式</string>
    <string name="bindinfo_numbertv">电话</string>
    <string name="bindinfo_numberev">请输入电话</string>
    <string name="bindinfo_affirm_number">确认绑定电话号</string>
    <string name="bindinfo_locationtv">地址</string>
    <string name="bindinfo_locationev">请输入地址</string>
    <string name="bindinfo_affirm_location">确认绑定地址</string>
    <string name="bindinfo_affirm">点击确认，表示同意《尚硅谷用户协议》</string>
    <string name="BindToolbar">绑定电话地址</string>
    <string name="address">添加收货地址</string>
</resources>