<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userInfo.BindActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">
        <ImageView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back11"
            android:id="@+id/detailBack"></ImageView>
        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="@dimen/dp_20"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/BindToolbar"></TextView>
        <ImageView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/menu"
            android:id="@+id/detailMenu"></ImageView>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_50"
        android:src="@drawable/new_user_login_icon"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:padding="@dimen/dp_10"
            android:text="@string/bindinfo_numbertv"
            android:textSize="@dimen/dp_20"></TextView>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="#00FFFFFF"
            android:hint="@string/bindinfo_numberev"></EditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/gray"></View>

    <Button
        android:id="@+id/bind_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/red"
        android:text="@string/bindinfo_affirm_number"
        android:textColor="@color/white"></Button>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:padding="@dimen/dp_10"
                android:text="@string/bindinfo_locationtv"
                android:textSize="@dimen/dp_20"></TextView>

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="#00FFFFFF"
                android:hint="@string/bindinfo_locationev"
                android:password="true"></EditText>
        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/bind_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/red"
        android:text="@string/bindinfo_affirm_location"
        android:textColor="@color/white"></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/bindinfo_affirm"></TextView>
</LinearLayout>