<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    tools:context=".main.mine.MineFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:background="@drawable/new_user_icon_background"
        android:layout_height="@dimen/dp_200">
        <ImageView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_gravity="center"
            android:src="@drawable/new_user_login_icon"
            android:id="@+id/isLogin"></ImageView>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/new_user_setting"></ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new_message_icon"
            android:id="@+id/message"
            android:layout_marginLeft="@dimen/dp_350"></ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="未登录"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_150"
            android:id="@+id/textname"></TextView>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:scaleType="fitXY"
            android:src="@drawable/bg1"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="我的订单"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_300"
            android:layout_marginTop="@dimen/dp_5"
            android:text="查看全部订单" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_390"
            android:src="@drawable/home_arrow_right"></ImageView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfk"
            android:id="@+id/pay"
            android:drawableTop="@drawable/new_order_status_fahuo"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfh"
            android:layout_marginLeft="@dimen/dp_30"
            android:id="@+id/toDropShipping"
            android:drawableTop="@drawable/new_order_status_fahuo"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dsh"
            android:layout_marginLeft="@dimen/dp_30"
            android:drawableTop="@drawable/new_order_status_fahuo"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ywc"
            android:layout_marginLeft="@dimen/dp_30"
            android:drawableTop="@drawable/new_order_status_fahuo"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouh"
            android:layout_marginLeft="@dimen/dp_30"
            android:drawableTop="@drawable/new_order_status_fahuo"
            ></TextView>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_address"></ImageView>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/shdz"
              android:layout_marginLeft="@dimen/dp_60"
              android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_collect"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wdsc"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_coupon"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wdyhj"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_score"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wdgz"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_prize"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wdjp"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_icon_ticket"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wddzp"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_invitation"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yqfx"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_callcenter"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kfzx"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:layout_marginTop="@dimen/dp_3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_channel_icon_feedback"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fwfk"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"></TextView>
    </FrameLayout>
    </LinearLayout>
    </ScrollView>


</LinearLayout>