<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bind.BindInfoActivity">


    <com.example.framework.view.ToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:app_back_color_toob="@color/white"
        app:app_left_isshow="true"
        app:app_left_src="@drawable/top_bar_left_back"
        app:app_text="@string/bindinfo_toolbar"
        app:app_text_color="@color/black"></com.example.framework.view.ToolBar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_dp_50"
        android:layout_marginBottom="@dimen/dm_dp_50"
        android:src="@drawable/new_user_login_icon"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm_dp_10"
        android:layout_marginRight="@dimen/dm_dp_10"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dm_dp_50"
            android:padding="@dimen/dm_dp_10"
            android:text="@string/bindinfo_numbertv"
            android:textSize="@dimen/dm_dp_20"></TextView>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_dp_50"
            android:background="#00FFFFFF"
            android:hint="@string/bindinfo_numberev"></EditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_dp_1"
        android:layout_marginLeft="@dimen/dm_dp_10"
        android:layout_marginRight="@dimen/dm_dp_10"
        android:background="@color/gray"></View>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_dp_10"
            android:layout_marginRight="@dimen/dm_dp_10"
            android:background="@color/white">

            <TextView
                android:id="@+id/locaYes"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dm_dp_50"
                android:padding="@dimen/dm_dp_10"
                android:text="@string/bindinfo_locationtv"
                android:textSize="@dimen/dm_dp_20"></TextView>

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm_dp_50"
                android:background="#00FFFFFF"
                android:hint="@string/bindinfo_locationev"></EditText>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_dp_10"
            android:layout_marginRight="@dimen/dm_dp_10"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dm_dp_50"
                android:padding="@dimen/dm_dp_10"
                android:text="@string/bindinfo_setDefault_addr"
                android:textSize="@dimen/dm_dp_20"></TextView>
            <CheckBox
                android:id="@+id/setDefault"
                android:button="@null"
                android:layout_alignParentRight="true"
                android:background="@drawable/toggle_off"
                android:layout_width="@dimen/dm_dp_50"
                android:layout_height="@dimen/dm_dp_50"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bindSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_dp_10"
        android:background="@color/red"
        android:text="@string/bindinfo_save"
        android:textColor="@color/white"></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_dp_20"
        android:layout_marginTop="@dimen/dm_dp_10"
        android:gravity="center"
        android:text="@string/bindinfo_affirm"></TextView>


</LinearLayout>