<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.home.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/red">
        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_weight="8"
            android:layout_margin="@dimen/dp_10"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/homefragment_toolbar_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_5"
                android:src="@drawable/icon_search_white"></ImageView>
            <EditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:hint="输入搜索信息"
                android:background="@null"
                android:id="@+id/homeFragmentSearch"
                android:layout_gravity="center"
                android:layout_height="match_parent"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:src="@drawable/community_message_icon"
                android:text="xxx"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/message"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#fff"></TextView>
        </LinearLayout>
    </LinearLayout>
    

    <com.youth.banner.Banner
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:id="@+id/banner"></com.youth.banner.Banner>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:id="@+id/menuRv"></androidx.recyclerview.widget.RecyclerView>
    <com.youth.banner.Banner
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_margin="@dimen/dp_20"
        android:id="@+id/bannerTwo"></com.youth.banner.Banner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_arrow_left_flash"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="今日闪购 距·结束"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"></TextView>
        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="match_parent"
            android:textColor="#fff"
            android:textSize="@dimen/dp_15"
            android:text="@string/down_time"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/home_fragment_time_down"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/find_more"
                android:textSize="@dimen/dp_15"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/home_arrow_right"></ImageView>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:id="@+id/secKillRv"></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>